# AI-Company-Research-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py
src/agent/: graph.py  prompts.py  state.py  tools.py
src/api/: dependencies.py  main.py  routes.py  schemas.py
src/ingestion/: chunker.py  embedder.py  pdf_processor.py  pipeline.py  vector_store.py  web_scraper.py
src/rag/: chain.py  generator.py
src/ui/: app.py  components.py
