[project]
name = "ai-company-research-agent"
version = "0.1.0"
description = "AI-powered company research agent with RAG and autonomous agents"
requires-python = ">=3.11"
dependencies = [
    # LLM Framework
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # Agent Orchestration
    "langgraph>=0.2.0",
    # Vector Database
    "chromadb>=0.5.0",
    # Embeddings (free, runs locally)
    "sentence-transformers>=3.0.0",
    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Web Scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    # PDF Processing
    "PyMuPDF>=1.24.0",
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Config & Logging
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    # Frontend
    "streamlit>=1.38.0",
    # Web Search (free tier)
    "tavily-python>=0.5.0",
    # Evaluation
    "ragas>=0.2.0",
    # Wikipedia access (more reliable than scraping HTML)
    "wikipedia-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
